--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@
 body {
 	background-color: #fff;
 	font-family: 'OpenSans';
-	margin: 0;
-	text-align: center;
+	margin: auto;
+	
 }
 img {
 	border: 0;
