--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,13 @@
 	src: local('☺'), url('../fonts/Play-Regular.woff') format('woff'), url('../fonts/Play-Regular.ttf') format('truetype'), url('../fonts/Play-Regular.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
-}
 body {
-	background-color: #fff;
-	font-family: 'OpenSans';
-	margin: 10px;
+    background-color: #fff;
+    font-family: 'OpenSans';
+    margin: 0 auto; /* Centraliza o conteúdo */
+    max-width: 960px; /* Define uma largura máxima */
+    padding: 20px; /* Adiciona um espaçamento interno */
+}
 	
 }
 img {
